--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" href="../static/css/bootstrap.css">
+  <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <script src="../static/js/bootstrap.js"></script>
+  <script src="//cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="../static/css/selfmd.css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,11 +18,13 @@
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#home_nav">
       <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
     </button>
-    <a href="#" class="navbar-brand">Blog</a>
+    <a href="#" class="navbar-brand" >Blog</a>
   </div>
   <div class="navbar-collapse collapse clearfix" id="home_nav">
     <ul class="nav nav-pills navbar-left">
       <li><a href="#" class="btn btn-lg">Home</a></li>
+      <li><a href="#" class="btn btn-lg" style="float:left;margin-left: 80px">Course</a></li>
+      <li><a href="#" class="btn btn-lg" style="float:left;margin-left: 80px">Essay</a></li>
       <li><a href="#" class="btn btn-lg" style="float:left;margin-left: 80px">Contact</a></li>
     </ul>
     <form role="search" class="navbar-form navbar-left" method="get">
@@ -181,7 +186,7 @@
             </td>
           </tr>
         </table>
-        <footer>
+        <footer class="modal-footer">
           <p>
             2019 Watermelon And LMP.<address>
           <a href="">@163</a>
