--- a/templates/homebase.html
+++ b/templates/homebase.html
@@ -1,129 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>{% block title %}个人博客{% endblock %}</title><!--子类可以替换改标题-->
   <link rel="stylesheet" href="../static/css/bootstrap.css">
   <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
-    </script>
+  <link rel="stylesheet" href="//cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
   <script src="../static/js/bootstrap.js"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="//cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="../static/css/selfmd.css">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}Blog{% endblock %}</title>
 </head>
 <body>
-<div class="container  userbgimage">
-  <div class="row">
-    <div class="col-md-12 clearfix">
-      <nav class="navbar navbar-inverse" role="navigation">
-        <div class="navbar-header"><a class="navbar-brand" href="index">Blog</a></div>
-        <div>
-          <ul class="nav navbar-nav">
-            <li><a href="#">A</a></li>
-            <li><a href="#">B</a></li>
-            <li><a href="#">C</a></li>
-          </ul>
-          <form role="search" class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control">
-              <input type="submit" class="form-control" value="Search">
-            </div>
-          </form>
-          <div class="dropdown" style="float: right">
-        <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">Nmae<span class="glyphicon glyphicon-user caret"></span></button>
-        <ul class="dropdown-menu" role="menu">
-          <li role="presentation">
-            <a role="menuitem"  tabindex="-1" href="#">Name:{{Username}}</a>
+<nav role="navigation" class="navbar navbar-default navbar-fixed-top">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#home_nav">
+      <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+    </button>
+    <a href="#" class="navbar-brand" >Blog</a>
+  </div>
+  <div class="navbar-collapse collapse clearfix" id="home_nav">
+    <ul class="nav nav-pills navbar-left">
+      <li><a href="#" class="btn btn-lg">Home</a></li>
+      <li><a href="#" class="btn btn-lg" style="float:left;margin-left: 80px">Course</a></li>
+      <li><a href="#" class="btn btn-lg" style="float:left;margin-left: 80px">Essay</a></li>
+      <li><a href="#" class="btn btn-lg" style="float:left;margin-left: 80px">Contact</a></li>
+    </ul>
+    <form role="search" class="navbar-form navbar-left" method="get">
+      <div class="form-group">
+        <input type="text" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-default">Search</button>
+    </form>
+    <div class="navbar-right clearfix">
+      <div class="btn-group open">
+         <button data-toggle="dropdown" class="btn btn-default dropdown-toggle">{{Nickname}}</button>
+         <ul class="dropdown-menu">
+          <li class="disabled">
+            <p>UserName:{{Username}}</p>
           </li>
-          <li role="presentation">
-            <a role="menuitem"  tabindex="-1" href="#">E-mail:{{Email}}</a>
+          <li class="disabled">
+            <a href="#">B</a>
           </li>
-          <li role="presentation">
-            <a role="menuitem"  tabindex="-1" href="editprofile">修改个人资料</a>
+          <li class="divider">
           </li>
-            <li role="presentation">
-                <a role="menuitem"  tabindex="-1" href="modpasswd">修改密码</a>
-            </li>
+          <li>
+            <a href="#">EditYourInformation</a>
+          </li>
         </ul>
       </div>
-        </div>
-      </nav>
     </div>
+  </div>
+</nav>
 
-  <div class="row">
-   <div class="col-md-1">
-     <img src="../static/images/timg.jpg" class="img-circle img-responsive">
-  </div>
-    <div class="col-md-4" style="float: left">
-      <label>{{Username}}</label>
-        <input class="form-control" id="Message_t" style="BACKGROUND-COLOR: transparent;"value={{massage}}>
-    </div>
-   </div>
-  </div>
+<div>
+  <img src="../static/images/blank.jpg" class="home_img">
 </div>
+
 <div class="container">
   <div class="row">
-    <div class="col-md-4" style="background-color: #1b6d85">
-      <h1>1</h1>
-      <p>
-        wewqwqddqwdsadasd
-        asdas
-        das
-        dasdasdsad
-      </p>
-    </div>
-    <div class="col-md-4" style="background-color: rosybrown">
-      <h1>1</h1>
-      <p>
-        wewqwqddqwdsadasd
-        asdas
-        das
-        dasdasdsad
-      </p>
-    </div>
-    <div class="col-md-4" style="background-color: darkkhaki">
-      <h1>1</h1>
-      <p>
-        wewqwqddqwdsadasd
-        asdas
-        das
-        dasdasdsad
-      </p>
+    <div class="col-md-12">
+      <nav role="navigation" class="navbar navbar-default">
+        <ul class="nav nav-pills">
+          <li>
+            <button class="btn btn-sm">My Artciles</button>
+          </li>
+        </ul>
+      </nav>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-2">
-      <button type="button" class="btn btn-lg btn-primary" data-toggle="modal" data-target="#PutArticle">发表文章</button>
-      <div class="modal fade" id="PutArticle" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-              <h3 class="modal-title">发表博文</h3>
-            </div>
-            <div class="modal-body">
-              <form role="form" class="form-horizontal">
-                <div class="form-group">
-                  <select class="form-control">
-                    <option>选择主题分类</option>
-                    <option>A</option>
-                    <option>B</option>
-                    <option>C</option>
-                  </select>
-                  <input type="text" class="form-control" placeholder="标题">
-                </div>
-                <div class="form-group">
-                  <textarea class="form-control" rows="10"></textarea>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-              <button type="submit" class="btn btn-primary" data-dismiss="modal">发表</button>
+    <div class="col-md-6 column">
+      <div class="panel-group" id="panel-182938">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <a class="panel-title" data-toggle="collapse" data-parent="#panel-182938" href="#panel-element-515500">Collapsible Group Item #1</a>
+          </div>
+          <div id="panel-element-515500" class="panel-collapse collapse in">
+            <div class="panel-body">
+              Anim pariatur cliche...
             </div>
           </div>
         </div>
+        </div>
       </div>
+    </div>
+    <div class="col-md-6">
+
     </div>
   </div>
 </div>
